# charta-vm

./: Cargo.toml  LICENSE  README.md
.cursor/rules/: charta-architecture.mdc  charta-language.mdc
charta-stdlib/: README.md
charta-vm/: README.md
src/: cycle.rs  error.rs  ir.rs  lib.rs  rung.rs  store.rs  vm.rs
tests/: README.md
